# trading-be

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: .env.template  logging_config.py  main.py  settings.py
src/api/: router.py
src/api/v1/: router.py
src/models/: candle.py  candle_prediction_body.py  crypto_symbol.py  response.py  timeframe_prediction_body.py
src/predictions/: lstm_model.py  rnn_model.py  xgboost_model.py
src/predictions/trained-models/: lstm.keras  rnn.keras  xgboost.json
src/services/: binance_rest_service.py
src/socket/: socket_io.py
src/sockets/: socket_io.py
src/utilities/: binance.py  prediction_utils.py
